# Django_project_240909

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
config/: dev_urls.py
config/settings/: base.py  local.py  prod.py
