[tool.poetry]
name = "django-mini"
version = "0.1.0"
description = ""
authors = ["Rosaly-J <seohwi327@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-restframework = "^0.0.1"
psycopg2 = "^2.9.9"
drf-yasg = "^1.21.7"
setuptools = "^74.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
